[minetest.conf] Change IRC bot nick to EE-Bot

--- a/minetest.conf
+++ b/minetest.conf
@@ -89,7 +89,7 @@ max_simultaneous_block_sends_server_total = 20
 abm_interval = 2.0
 
 ## IRC
-irc.nick = Eurythmia
+irc.nick = EE-Bot
 irc.server = daconcepts.com
 irc.channel = #Eurythmia
 
