--- a/minetest.conf
+++ b/minetest.conf
@@ -45,6 +45,9 @@ enable_fire = false
 
 map-dir = /home/minetest/.minetest/worlds/eurythmia_evo
 
+# Mapgen
+mg_flags = caves,nodungeons,light,decorations
+
 # Mods
 secure.trusted_mods = irc,babelfish,xban2,mtsatellite
 secure.enable_security = truehudbars_bar_type = progress_bar
