[minetest.conf] Change map dir

--- a/minetest.conf
+++ b/minetest.conf
@@ -43,7 +43,7 @@ static_spawnpoint = 0,30000,0
 default_privs = shout
 enable_fire = false
 
-map-dir = /home/minetest/.minetest/worlds/eurythmia_evo
+map-dir = /home/minetest/evoworld
 
 # Mapgen
 mg_flags = caves,nodungeons,light,decorations
