--- a/default_settings.conf
+++ b/default_settings.conf
@@ -1,1 +1,5 @@
 api_uri = http://localhost:81/api/
+-- The ping interval. Use 0 for auto-calculated.
+ping_interval = 0
+-- The privileges players have while creating their account.
+auth_privs = shout
