[minetest.conf] Write IRC channel in lower case

--- a/minetest.conf
+++ b/minetest.conf
@@ -94,7 +94,7 @@ abm_interval = 2.0
 ## IRC
 irc.nick = EE-Bot
 irc.server = daconcepts.com
-irc.channel = #Eurythmia
+irc.channel = #eurythmia
 
 
 ## Areas
