Check if user is globally blacklisted on connection

--- a/default_settings.conf
+++ b/default_settings.conf
@@ -1,5 +1,8 @@
 api_uri = http://localhost:81/api/
--- The ping interval. Use 0 for auto-calculated.
+# The ping interval. Use 0 for auto-calculated.
 ping_interval = 0
--- The privileges players have while creating their account.
+# The privileges players have while creating their account.
 auth_privs = shout
+
+# Whether to show or not the source moderator name in blacklist ban message.
+blacklist_show_source_moderator = true
