Error handling on authentication and registering

--- a/default_settings.conf
+++ b/default_settings.conf
@@ -6,3 +6,6 @@ auth_privs = shout
 
 # Whether to show or not the source moderator name in blacklist ban message.
 blacklist_show_source_moderator = true
+
+# Maximum time between the on_prejoinplayer and the on_joinplayer callbacks, in seconds
+joinplayer_timeout = 7
