--- a/default_settings.conf
+++ b/default_settings.conf
@@ -4,8 +4,15 @@ ping_interval = 0
 # The privileges players have while creating their account.
 auth_privs = shout
 
-# Whether to show or not the source moderator name in blacklist ban message.
+# Whether to show the source moderator name in blacklist and ban access denied message.
 blacklist_show_source_moderator = true
+ban_show_source_moderator = true
+
+# Whether to enable the local ban list. Disable if you want to use an external mod, such as xban2.
+enable_local_ban = true
+
+# Whether to make the local ban entries visible by all players.
+ban_entries_visible = false
 
 # Maximum time between the on_prejoinplayer and the on_joinplayer callbacks, in seconds
 joinplayer_timeout = 7
