Implement server auth

--- a/default_settings.conf
+++ b/default_settings.conf
@@ -1,6 +1,12 @@
 api_uri = http://localhost:81/api/
+
+# Server authentication name and password.
+server_name = ServerName
+server_password = ServerPassword
+
 # The ping interval. Use 0 for auto-calculated.
 ping_interval = 0
+
 # The privileges players have while creating their account.
 auth_privs = shout
 
