Implement automatic per-session user translation Currently, this only works with minetest.chat_send_player and minetest.chat_send_all. Also, this is quite untested.

--- a/default_settings.conf
+++ b/default_settings.conf
@@ -22,3 +22,6 @@ ban_entries_visible = false
 
 # Maximum time between the on_prejoinplayer and the on_joinplayer callbacks, in seconds
 joinplayer_timeout = 7
+
+# Whether to enable by-client translation using intllib. This requires the intllib mod to be installed on the server
+enable_intllib = true
