Make umabis a submodule Umabis itself uses a submodule (intllib) and should not require local changes

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "mods/irc/irc"]
 	path = mods/irc/irc
 	url = https://github.com/ShadowNinja/LuaIRC.git
+[submodule "mods/umabis"]
+	path = mods/umabis
+	url = https://github.com/MT-Eurythmia/Umabis.git
