Switch IRC to FreeNode

--- a/minetest.conf
+++ b/minetest.conf
@@ -93,7 +93,7 @@ abm_interval = 2.0
 
 ## IRC
 irc.nick = EE-Bot
-irc.server = daconcepts.com
+irc.server = chat.freenode.net
 irc.channel = #eurythmia
 
 
