IRC: change bot name to EurythmiaEvolution

--- a/minetest.conf
+++ b/minetest.conf
@@ -92,7 +92,7 @@ max_simultaneous_block_sends_server_total = 20
 abm_interval = 2.0
 
 ## IRC
-irc.nick = EE-Bot
+irc.nick = EurythmiaEvolution
 irc.server = chat.freenode.net
 irc.channel = #eurythmia
 
