--- a/minetest.conf
+++ b/minetest.conf
@@ -119,6 +119,11 @@ babelfish.key = trnsl.1.1.20161221T173420Z.0961d2037ec435a0.9e72aab24ae3cc6f7f35
 ## Books (admin pencil)
 books.editor = true
 
+## Umabis
+umabis.api_uri = https://umabis.langg.net/api/
+umabis.server_name = EurythmiaEvolution
+# (Password is part of the secret config, not public in the git repo)
+
 ## Client
 aux1_descends = false
 doubletap_jump = true
