Announce server on servers.minetest.net

--- a/minetest.conf
+++ b/minetest.conf
@@ -2,8 +2,7 @@
 server_name = Eurythmia Evolution [Francais/English]
 server_description = Survive, create, and have fun! Survivez, créez, et amusez-vous !
 server_address = langg.net
-#server_announce = true
-server_announce = false
+server_announce = true
 serverlist_url = servers.minetest.net
 server_url = http://eurythmia.langg.net/
 port = 30001
