--- a/mods/maptools/mod.conf
+++ b/mods/maptools/mod.conf
@@ -1,1 +1,4 @@
 name = maptools
+description = Adds various special versions of normal blocks, tools, and other map maintainer tools.
+depends = default
+optional_depends = intllib
