git subrepo pull mods/moreores
subrepo:
  subdir:   "mods/moreores"
  merged:   "69d5a7626"
upstream:
  origin:   "https://github.com/minetest-mods/moreores.git"
  branch:   "master"
  commit:   "69d5a7626"
git-subrepo:
  version:  "0.4.0"
  origin:   "https://github.com/ingydotnet/git-subrepo"
  commit:   "5d6aba9"

--- a/mods/moreores/mod.conf
+++ b/mods/moreores/mod.conf
@@ -1,4 +1,4 @@
 name = moreores
 description = Adds new ore types.
 depends = default
-optional_depends = carts,farming,frame,intllib,mg,toolranks
+optional_depends = carts,farming,frame,mg,toolranks
