--- a/mods/moreblocks/mod.conf
+++ b/mods/moreblocks/mod.conf
@@ -2,3 +2,4 @@ name = moreblocks
 description = Adds various miscellaneous blocks to the game.
 depends = default
 optional_depends = intllib,stairs,farming,wool,basic_materials
+min_minetest_version = 5.0.0
