--- a/mods/moreores/mod.conf
+++ b/mods/moreores/mod.conf
@@ -2,3 +2,4 @@ name = moreores
 description = Adds new ore types.
 depends = default
 optional_depends = carts,farming,frame,mg,toolranks
+min_minetest_version = 5.0.0
