--- a/mods/bakedclay/mod.conf
+++ b/mods/bakedclay/mod.conf
@@ -1,1 +1,4 @@
 name = bakedclay
+depends = default
+optional_depends = stairs, moreblocks, lucky_block, technic_cnc
+description = Adds the ability to bake clay into blocks and colour them with dye.
