git subrepo pull (merge) mods/rythium
subrepo:
  subdir:   "mods/rythium"
  merged:   "9e59e2141"
upstream:
  origin:   "https://github.com/mega-gigaMynetest/rythium.git"
  branch:   "main"
  commit:   "9e59e2141"
git-subrepo:
  version:  "0.4.3"
  origin:   "https://github.com/ingydotnet/git-subrepo"
  commit:   "2f68596"

--- a/mods/rythium/mod.conf
+++ b/mods/rythium/mod.conf
@@ -1,4 +1,4 @@
 name=rythium
 description = Adds a new mineral and tool
 depends = default,moreores,3d_armor
-optional_depends = technic
+optional_depends = technic, treecapitator
